# SDL2Practice-Obsolete

./: .gitmodules
00_GetUsedToAPI/: CMakeLists.txt
00_GetUsedToAPI/src/: main.cpp
00_MovingRect/src/: main.cpp
01_MovingRect/: CMakeLists.txt  Makefile
01_MovingRect/include/: Game.hpp
01_MovingRect/src/: Game.cpp  main.cpp
01_MovingRect/src/sosim/: SDL_Factory.cpp
02_TicTacToe/: CMakeLists.txt
02_TicTacToe/include/: Board.hpp  Cell.hpp  Game.hpp
02_TicTacToe/include/sosim/: SDL_Factory.hpp
02_TicTacToe/src/: Board.cpp  Cell.cpp  Game.cpp  main.cpp
02_TicTacToe/src/sosim/: SDL_Factory.cpp
03_Pong/: CMakeLists.txt
03_Pong/include/: Game.hpp  GameObject.hpp
03_Pong/include/asset/: AssetPackage.hpp
03_Pong/include/scene/: PlayScene.hpp  Scene.hpp  SceneType.hpp  SelectPlayer.hpp
03_Pong/include/scene/ui/: Button.hpp  WinPopup.hpp
03_Pong/include/sosim/: SDL_Exception.hpp  SDL_Factory.hpp
03_Pong/src/: Game.cpp  main.cpp
03_Pong/src/asset/: AssetPackage.cpp
03_Pong/src/scene/: PlayScene.cpp  SelectPlayer.cpp
03_Pong/src/scene/ui/: Button.cpp  WinPopup.cpp
03_Pong/src/sosim/: SDL_Factory.cpp
SDL2Template/src/: main.cpp
